Day-10-K8s-Ingress-and-Volumes/volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: data-pod
spec:
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: data-pvc
  containers:
    - name: writer
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
        - name: data
          mountPath: /data
